align items to grid correctly

--- a/src/components/ComponentStatus/component-status.scss
+++ b/src/components/ComponentStatus/component-status.scss
@@ -1,6 +1,6 @@
 .component-status-page {
   .page-table {
-    width: 100%;
+    width: calc(100% + 2rem);
   }
 
   .inline-tag {
