--- a/src/components/PageTable/page-table.scss
+++ b/src/components/PageTable/page-table.scss
@@ -2,14 +2,15 @@
 .component-docs table {
   margin-bottom: 1.5rem;
   line-height: 1.25;
+  margin-left: -1rem;
 
   @include breakpoint('sm') {
-    width: 100%;
+    width: calc(100% + 2rem);
   }
 
-  @include breakpoint('lg') {
+  @include breakpoint('md') {
     width: auto;
-    min-width: 67.3%;
+    min-width: calc(67.3% + 2rem);
   }
 
   thead {
